# mraa

edison_tools/: buildall.sh  extboard_detect.service  extboardcheck.sh  install_edisontools.sh
edison_tools/all_built/: check5611  check5883  check6050  install_edisontools.sh  libmraa.so.0  mraaio
edison_tools/check5611/: CMakeLists.txt
edison_tools/check5611/src/: main.cpp
edison_tools/check5611/src/MS5611/: MS561101BA.cpp  MS561101BA.h
edison_tools/check5611/src/edison_i2c/: edison_i2c.cpp  edison_i2c.h
edison_tools/check5883/: CMakeLists.txt
edison_tools/check5883/src/: ArduinoWrapper.h  main.cpp
edison_tools/check5883/src/HMC5883L/: HMC5883L.h
edison_tools/check5883/src/edison_i2c/: edison_i2c.h  i2c.c
edison_tools/check6050/: CMakeLists.txt
edison_tools/check6050/src/: main.cpp
edison_tools/check6050/src/edison_i2c/: edison_i2c.cpp
edison_tools/mraaad/: CMakeLists.txt
edison_tools/mraaad/src/: main.c
edison_tools/mraaio/: CMakeLists.txt
edison_tools/mraaio/src/: main.c
edison_tools/mraapwm/: CMakeLists.txt
edison_tools/mraapwm/src/: main.c
include/: mraa_adv_func.h
install/lib/: libmraa.so.0  libmraa.so.0.0.1  libmraa.so.0.9.0
install/lib/pkgconfig/: mraa.pc
src/: CMakeLists.txt
src/aio/: aio.c
src/javascript/: CMakeLists.txt  README.md.in  package.json.cmake
src/pwm/: pwm.c
src/x86/: ads1115.c  ads1115.h  intel_edison_fab_c.c
tests/mock/: platform_checks.py
